--- a/portfolio/css/timeline.css
+++ b/portfolio/css/timeline.css
@@ -25,6 +25,9 @@ body, html {
 	margin-bottom: 423px;
 	padding: 0 1.375em;
 }
+.zh, .en{
+	margin-bottom: 40px;
+}
 
 @font-face {
 	font-family: 'huxico';
