--- a/less/blog.less
+++ b/less/blog.less
@@ -1022,3 +1022,8 @@ img::-moz-selection {
 .page-fullscreen footer .copyright a:hover{
 	color: #ddd;
 }
+.beian, .beian a{
+	text-align: center;
+	font-size: 12px;
+	color: #666;
+}
