--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -84,7 +84,7 @@
                   resuly.me &copy; 2017
                   <a href="http://www.miitbeian.gov.cn/" target="_blank">皖ICP备17009330号</a>
                 </p>
-                
+
             </div>
         </div>
     </div>
@@ -161,7 +161,7 @@
 
 <!--fastClick.js -->
 <script>
-    async("//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js", function(){
+    async("http://cdn.staticfile.org/fastclick/1.0.6/fastclick.min.js", function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
     })
