--- a/less/blog.less
+++ b/less/blog.less
@@ -884,7 +884,7 @@ img::-moz-selection {
 /* Tags support End*/
 
 /* Hux make all img responsible in post-container */
-.post-container img{
+.post-container img, .post-container video{
 	display: block;
 	max-width: 100%;
 	height: auto;
