--- a/less/blog.less
+++ b/less/blog.less
@@ -6,7 +6,7 @@
 // Global Components
 
 body {
-	.sans-serif;
+	font-family: Exo,'-apple-system','Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif;
 	font-size: 16px;
 	// Hux mpdify to 16px (Mobile First), and increase to 20px while 768+ width
 	color: @gray-dark;
@@ -17,7 +17,16 @@ body {
 // -- Typography
 
 p {
-	margin: 30px 0;
+	text-align: justify;
+	font-size: 1.6rem;
+	line-height: 2.8rem;
+	margin-top: 2.2rem;
+	color: #333;
+}
+li {
+	margin-top: 0.5rem;
+	line-height: 2.8rem;
+	text-align: justify;
 }
 
 h1,
@@ -26,8 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-	.sans-serif;
-	line-height: 1.1;
+	font-family: '-apple-system','Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif,sans-serif;
 	font-weight: bold;
 }
 h1{
@@ -62,6 +70,7 @@ blockquote {
 	margin: 20px 0 20px;
 	p{
 		margin: 0;
+		text-align: inherit;
 	}
 }
 
@@ -138,7 +147,7 @@ pre code{
 	h4,
 	h5,
 	h6 {
-		margin: 30px 0 10px;
+		margin: 30px 0 15px;
 	}
 	h5{
 		font-size: 19px;
@@ -157,7 +166,7 @@ pre code{
 		}
 	}
 	ul,ol{
-		margin-bottom: 40px;
+		margin-bottom: 25px;
 		@media screen and (max-width: 768px){
 			&{
 				padding-left: 30px;
@@ -211,7 +220,7 @@ pre code{
 	 */
 	.navbar-default .navbar-collapse{
 		position: absolute;
-     	right: 0;
+    right: 0;
 		border: none;
 		background: white;
 		box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
@@ -301,9 +310,9 @@ pre code{
 		li {
 			a {
 				text-transform: uppercase;
-				font-size: 12px;
+				font-size: 13px;
 				line-height: 20px;
-				font-weight: 800;
+				font-weight: normal;
 				letter-spacing: 1px;
 				// only highlight in mobile
 				&:active{
@@ -495,6 +504,9 @@ pre code{
 			color: @brand-primary;
 		}
 		> .post-title {
+			&:hover{
+				text-decoration: underline;
+			}
 			font-size: 21px;
 			line-height: 1.3;
 			margin-top: 30px;
@@ -504,14 +516,13 @@ pre code{
 			font-size: 15px;
 			line-height: 1.3;
 			margin: 0;
-			font-weight: 300;
+			font-weight: 400;
 			margin-bottom: 10px;
 		}
 	}
 	> .post-meta {
-		.serif;
-		color: @gray;
-		font-size: 16px;
+		color: #969696;
+		font-size: 14px;
 		// font-style: italic;
 		margin-top: 0;
 		> a {
@@ -536,7 +547,7 @@ pre code{
 			}
 		}
 		.post-meta{
-			font-size: 18px;
+			font-size: 14px;
 		}
 	}
 }
@@ -545,6 +556,8 @@ pre code{
 .post-content-preview{
     font-size: 13px;
     color:#a3a3a3;
+		text-align: justify;
+    line-height: 2.5rem;
     &:hover{
         color: @brand-primary;
     }
@@ -1026,4 +1039,7 @@ img::-moz-selection {
 	text-align: center;
 	font-size: 12px;
 	color: #666;
+}
+.subheading{
+	margin-top: 15px !important;
 }
