--- a/less/blog.less
+++ b/less/blog.less
@@ -505,7 +505,7 @@ pre code{
 		}
 		> .post-title {
 			&:hover{
-				text-decoration: underline;
+				// text-decoration: underline;
 			}
 			font-size: 21px;
 			line-height: 1.3;
@@ -521,7 +521,7 @@ pre code{
 		}
 	}
 	> .post-meta {
-		color: #969696;
+		color: rgba(0,0,0,.54);
 		font-size: 14px;
 		// font-style: italic;
 		margin-top: 0;
@@ -555,7 +555,7 @@ pre code{
 // Hux add home-page post-content-preview
 .post-content-preview{
     font-size: 13px;
-    color:#a3a3a3;
+    color: rgba(0,0,0,.66);
 		text-align: justify;
     line-height: 2.5rem;
     &:hover{
