--- a/projects/3dconvs/css/style.css
+++ b/projects/3dconvs/css/style.css
@@ -25,6 +25,7 @@ h1 {
   font-weight: normal;
   text-align: center;
   font-size: 20px;
+  font-weight: 600;
   margin-top: 50px;
   margin-bottom: 30px;
   color: #505253;
