two more posts & style fix

--- a/less/blog.less
+++ b/less/blog.less
@@ -6,7 +6,7 @@
 // Global Components
 
 body {
-	font-family: Exo,'-apple-system','Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif;
+	font-family: 'Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif;
 	font-size: 16px;
 	// Hux mpdify to 16px (Mobile First), and increase to 20px while 768+ width
 	color: @gray-dark;
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: '-apple-system','Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif,sans-serif;
+	font-family: 'Open Sans',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue','Hiragino Sans GB','Microsoft YaHei',Helvetica,Arial,sans-serif,sans-serif;
 	font-weight: bold;
 }
 h1{
@@ -129,6 +129,7 @@ pre code{
 // In the list of posts
 .postlist-container{
 	margin-bottom: 15px;
+	padding-right: 35px;
 }
 
 // In the post.
