--- a/less/blog.less
+++ b/less/blog.less
@@ -583,13 +583,11 @@ pre code{
 
 .caption {
 	text-align: center;
-	font-size: 14px;
-	padding: 10px;
-	font-style: italic;
-	margin: 0;
-	display: block;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
+  font-size: 14px;
+  padding: 0 0 10px 0;
+  margin: -15px 0 0 0;
+  display: block;
+  color: rgba(0,0,0,0.66);
 }
 
 footer {
