--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -186,6 +186,17 @@
 </script>
 {% endif %}
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159868386-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159868386-1');
+</script>
+
+
 
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
