--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -161,7 +161,7 @@
 
 <!--fastClick.js -->
 <script>
-    async("http://cdn.staticfile.org/fastclick/1.0.6/fastclick.min.js", function(){
+    async("https://cdn.staticfile.org/fastclick/1.0.6/fastclick.min.js", function(){
         var $nav = document.querySelector("nav");
         if($nav) FastClick.attach($nav);
     })
